--- a/src/main/webapp/templates/altas.html
+++ b/src/main/webapp/templates/altas.html
@@ -7,44 +7,58 @@
 </head>
 <body>
 	<header>
-		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-			<a class="navbar-brand" href="/servlets">Inicio</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarNav">
-				<ul class="navbar-nav">
-			    	<li class="nav-item active">
-			        	<a class="nav-link" href="/servlets/altas">Altas</a>
-			      	</li>
-			      	<li class="nav-item">
-			        	<a class="nav-link" href="/servlets/bajas">Bajas</a>
-			      	</li>
-			      	<li class="nav-item">
-			        	<a class="nav-link" href="/servlets/cambios">Modificacion</a>
-			      	</li>
-			    </ul>
+		<nav class="navbar navbar-expand-lg navbar-dark bg-dark container-fluid">
+			<div class="container">
+				<a class="navbar-brand" href="/servlets">Inicio</a>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarNav" style="padding-left: 1em;">
+					<ul class="navbar-nav">
+				    	<li class="nav-item">
+				        	<a class="nav-link" href="/servlets/altas">Altas</a>
+				      	</li>
+				      	<li class="nav-item">
+				        	<a class="nav-link" href="/servlets/bajas">Bajas</a>
+				      	</li>
+				      	<li class="nav-item">
+				        	<a class="nav-link" href="/servlets/cambios">Modificacion</a>
+				      	</li>
+				    </ul>
+				</div>
 			</div>
 		</nav>
 	</header>
 	<main>
-		<h1>Registrar un perrito</h1>
-		<form action="/servlets/altas" method="POST">
-			<label for="txtNameDog">Nombre del perrito:</label><br>
-		  	<input type="text" id="txtNameDog" name="txtNameDog" placeholder="Nombre Del Perro" autofocus required><br>
-		  	<label for="txtEdad">Edad:</label><br>
-		  	<input type="number" id="txtEdad" name="txtEdad" placeholder="Edad" required><br><br>
-		  	<label for="txtRaza">Raza:</label><br>
-		  	<input type="text" id="txtRaza" name="txtRaza" placeholder="Raza" required><br><br>
-		  	<label for="txtNameOwner">Nombre del dueño:</label><br>
-		  	<input type="text" id="txtNameOwner" name="txtNameOwner" placeholder="Dueño" required><br><br>
-		  	<input type="submit" value="Agregar Perrito">
-		</form>
+		<section class="container-fluid">
+			<h1 class="display1 text-center container" style="padding: 1em;">Registrar un perrito</h1>
+			<div class="container-sm">
+				<form action="/servlets/altas" method="POST">
+					<div class="form-group">
+						<label for="txtNameDog">Nombre del perrito:</label>
+				  		<input type="text" class="form-control" id="txtNameDog" placeholder="Nombre Del Perro" aria-describedby="lblNameDogHelp" autofocus required>
+				  		<small id="lblNameDogHelp" class="form-text text-muted" style="padding-bottom:1em;">Coloca el nombre de tu perrito aqui</small>	
+				  		
+						<label for="txtEdad">Edad:</label><br>
+				  		<input type="number" class="form-control" id="txtEdad" name="txtEdad" placeholder="Edad" required>
+				  		<small id="lblEdadDog" class="form-text text-muted" style="padding-bottom:1em;">Coloca la edad de tu perrito aqui</small>
+				  		
+						<label for="txtRaza">Raza:</label><br>
+				  		<input type="text" class="form-control" id="txtRaza" name="txtRaza" placeholder="Raza" required>
+				  		<small id="lblRazaDog" class="form-text text-muted" style="padding-bottom:1em;">Coloca la raza de tu perrito aqui</small>
+				  		
+						<label for="txtNameOwner">Nombre del dueño:</label><br>
+				  		<input type="text" class="form-control" id="txtNameOwner" name="txtNameOwner" placeholder="Dueño" required>
+				  		<small id="lblName" class="form-text text-muted" style="padding-bottom:1em;">Coloca tu nombre aqui</small>
+					</div>
+				  	<input type="submit" class="btn btn-primary btn-lg btn-block" value="Agregar Perrito">
+				</form>
+			</div>
+		</section>
 	</main>
-	<footer>
+	<footer class="text-center bg-secondary" style="padding: 1em; position: absolute; width: 100%; bottom: 0;">
 		<div id="rightsReserved">
-			<hr>
-			Copyright&copy; 2023 - Página creada por Guy e Ikari - Todos los derechos reservados
+			Copyright&copy; 2023 - Aplicacion creada por Ikari y Guy - Todos los derechos reservados
 		</div>
 	</footer>
 </body>
