--- a/src/main/webapp/templates/bajas.html
+++ b/src/main/webapp/templates/bajas.html
@@ -7,41 +7,46 @@
 </head>
 <body>
 	<header>
-		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-			<a class="navbar-brand" href="/servlets">Inicio</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarNav">
-				<ul class="navbar-nav">
-			    	<li class="nav-item active">
-			        	<a class="nav-link" href="/servlets/altas">Altas</a>
-			      	</li>
-			      	<li class="nav-item">
-			        	<a class="nav-link" href="/servlets/bajas">Bajas</a>
-			      	</li>
-			      	<li class="nav-item">
-			        	<a class="nav-link" href="/servlets/cambios">Modificacion</a>
-			      	</li>
-			    </ul>
+		<nav class="navbar navbar-expand-lg navbar-dark bg-dark container-fluid">
+			<div class="container">
+				<a class="navbar-brand" href="/servlets">Inicio</a>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarNav" style="padding-left: 1em;">
+					<ul class="navbar-nav">
+				    	<li class="nav-item">
+				        	<a class="nav-link" href="/servlets/altas">Altas</a>
+				      	</li>
+				      	<li class="nav-item">
+				        	<a class="nav-link" href="/servlets/bajas">Bajas</a>
+				      	</li>
+				      	<li class="nav-item">
+				        	<a class="nav-link" href="/servlets/cambios">Modificacion</a>
+				      	</li>
+				    </ul>
+				</div>
 			</div>
 		</nav>
 	</header>
-	<main>
-		<h1>Dar de baja un perrito</h1>
-		<form action="/servlets/bajas" method="POST">
-			<label for="txtId">Id de registro:</label><br>
-		  	<input type="number" id="txtId" name="txtId" placeholder="ID" autofocus required><br>
-		  	<label for="txtNameOwner">Nombre del dueño:</label><br>
-		  	<input type="text" id="txtNameOwner" name="txtNameOwner" placeholder="Dueño" required><br><br>
-		  	<input type="submit" value="Eliminar Perrito">
-		</form>
-		<br><br><br><br><br><br>
-	</main>
-	<footer>
+	<main class="container-fluid">
+		<div class="container-sm">
+			<h1 class="display1 text-center" style="padding: 1em;">Dar de baja un perrito</h1>
+			<form action="/servlets/bajas" method="POST" class="form-group">
+				<label for="txtId">Id de registro:</label><br>
+			  	<input type="number" class="form-control" id="txtId" name="txtId" placeholder="ID" autofocus required>
+			  	<small id="lblNameDogHelp" class="form-text text-muted" style="padding-bottom:1em;">Coloca el ID de tu registro</small>	
+			  	
+			  	<label for="txtNameOwner">Nombre del dueño:</label>
+			  	<input type="text" class="form-control" id="txtNameOwner" name="txtNameOwner" placeholder="Dueño" required>
+			  	<small id="lblNameDogHelp" class="form-text text-muted" style="padding-bottom:1em;">Coloca tu nombre aqui</small>	
+			  	<input type="submit" class="btn btn-primary btn-lg btn-block" value="Eliminar Perrito">	
+			</form>
+		</div>
+	</main> 
+	<footer class="text-center bg-secondary" style="padding: 1em; position: absolute; width: 100%; bottom: 0;">
 		<div id="rightsReserved">
-			<hr>
-			Copyright&copy; 2023 - Página creada por Guy e Ikari - Todos los derechos reservados
+			Copyright&copy; 2023 - Aplicacion creada por Ikari y Guy - Todos los derechos reservados
 		</div>
 	</footer>
 </body>
